<resources>
  <string name="app_name">Remote Sales Agent</string>
  <string name="main_update">Пожалуйста обновитесь\nдо</string>
  <string name="calc_delete">&lt;</string>
  <string name="list_order_title">Remote Sales Agent</string>
    <string name="list_order_date">[Дата]</string>
    <string name="list_order_time">[Время]</string>
    <string name="list_order_sum">[Сумма]</string>
    <string name="list_order_titlesum">Сумма:</string>
    <string name="list_order_titleord">Заказов:</string>
    <string name="list_order_curency">&#160;грн.</string>
    <string name="list_order_paytype">[Безнал]</string>
    <string name="list_order_client">[Наименование контрагента]</string>
    <string name="list_order_adres">[Адрес доставки]</string>
    <string name="list_order_empty">За выбранный период \nзаказов нет!\nКоснитесь экрана на пару 
    			секунд чтобы вызвать меню с перечнем возможных операций, либо 
    			нажмите кнопку MENU на устройстве..</string>
	<string name="list_order_noBD">База данных пуста!\n Для загрузки параметров торговли коснитесь экрана на 
				пару секунд и выберите соответствующую операцию в контекстном меню, 
				либо нажмите кнопку MENU на устройстве...</string>
	<string name="list_order_new">Новый</string>
	<string name="list_order_neworder">Новый заказ</string>
	<string name="list_order_modify">Изменить</string>
	<string name="list_order_about">О программе</string>
	<string name="list_order_exit">Выход</string>
	<string name="list_order_info">Посетите Веб-сайт приложения:\n http://www.rslab.com.ua/</string>
	<string name="list_order_delete">Удалить</string>
	<string name="list_order_sync">Синхр.</string>
	<string name="list_order_map">Карта</string>
	<string name="list_order_user">Смена БД</string>
	<string name="list_order_sales">Журнал отгрузок...</string>
	<string name="list_order_synchronization">Синхронизация</string>
	<string name="list_order_settings">Настройки</string>
	<string name="list_order_debit">Дебиторка</string>
	<string name="list_order_kassa">Сбор средств</string>
	<string name="list_order_copy">Копировать</string>
	<string name="list_order_report">Отчеты</string>
	<string name="list_order_datefilter">Отбор за период...</string>
	<string name="list_order_warning_noBD">База данных пуста!\n</string>
	<string name="list_order_warning_noCust">Список клиентов пуст!\n</string>
	<string name="list_order_warning_notselected">Не выбран заказ!</string>
	<string name="list_order_warning_selected">Выбран:</string>
	<string name="list_order_error_copy">Ошибка копирования</string>
	<string name="list_order_succ_copy">Удачно скопировали</string>
	<string name="list_order_warning_locked">Уже синхронизирован. Удаление запрещено!</string>
	<string name="list_order_update_yes">Да</string>
	<string name="list_order_update_cancel">Не сейчас</string>
	<string name="list_order_update_title">Обновление до</string>
	<string name="list_order_update_message">Обнаружена новая версия.\nДля обновления необходимо подключение к интернет и 1,5Мб трафика.\nЖелаете обновиться сейчас?</string>
	<string name="list_order_update_process">Пожалуйста, дождитесь завершения процесса обновления...</string>
	<string name="list_order_noregistration">ВНИМАНИЕ!!!\nНе зарегистрированная копия приложения! Есть вероятность потери заказов! Скоро будет отключена возможность сбрасывать заказы через интернет!
											 Срочно свяжитесь с ИТ-отделом!</string>
	<string name="list_order_dbselect">Выберите БД</string>
  <string name="prefs_namecode_default">Не выбрано</string>
	<string name="prefs_lastdwnld_default">Не выполнялось</string>
	<string name="prefs_interface_default">DBF</string>
	<string name="prefs_protocol_default">E-mail</string>
	<string name="prefs_sdload_via">Загрузка через</string>
	<string name="prefs_sdload_error">Ошибка чтения</string>
	<string name="prefs_sdload_done">Загрузка выполнена</string>
	<string name="prefs_sdout_done">Заказы выгружены</string>
	<string name="prefs_sdout_error">Ошибка выгрузки</string>
	<string name="prefs_sdload_el">Tv, Cl, Us, Db, TT,</string>
	<string name="prefs_sdload_nofiles">Нет необх. файлов !!!\n /sdcard/rsa/inbox</string>
  <string name="map_title">ВИЗИТЫ</string>
	<string name="map_toDate">На дату</string>
  <string name="head_title">ПАРАМЕТРЫ ЗАКАЗА</string>
  <string name="head_title_blue">ТЕКУЩИЙ ЗАКАЗ</string>
  	<string name="head_ok">OK</string>
  	<string name="head_cancel">Не сохранять</string>
  	<string name="head_dlg_cancel">Отмена</string>
  	<string name="head_goods">Товар</string>
  	<string name="head_addgoods">Подбор товара</string>
  	<string name="head_save">Сохр.</string>
  	<string name="head_selectclient">Выберите Контрагента:</string>
  	<string name="head_selectadress">Выберите торговую точку:</string>
  	<string name="head_selectWH">Выберите склад</string>
  	<string name="head_settings">Особые параметры:</string>
  	<string name="head_WH">СКЛ</string>
  	<string name="head_paytype">БНАЛ</string>
  	<string name="head_vat">НДС</string>
  	<string name="head_delay">ОТС</string>
  	<string name="head_disc">СК</string>
  	<string name="head_deliv">ДСТ</string>
  	<string name="head_noclient">Такого Клиента больше нет в базе, выбран другой!</string>
  	<string name="head_noshop">Такой точки больше нет в базе, выбрана другая!</string>
  	<string name="head_client">&#160;Клиент:&#160;</string>
  	<string name="head_adress">&#160;Адрес:&#160;</string>
  	<string name="head_warehouse">&#160;Склад:&#160;</string>
  	<string name="head_paydelay">&#160;Отсрочка платежа:&#160;</string>
  	<string name="head_days">&#160;дней\n</string>
  	<string name="head_cashpaytype">&#160;Вид расчета:&#160;</string>
  	<string name="head_writeremark">&#160;Примечание:&#160;</string>
  	<string name="head_writedisc">&#160;Скидка:&#160;</string>
  	<string name="debit_date">[Дата]</string>
  	<string name="debit_dateto">[ДатаДо]</string>
  	<string name="debit_sum">[Сумма]</string>
  	<string name="debit_curency">&#160;грн.</string>
  	<string name="debit_doctype">Расх./накл. №:&#160;</string>
  	<string name="debit_doccode">69А0000345&#160;</string>
  	<string name="debit_expiration">Просрочено 0.00 на 0 дн.</string>
  <string name="preferences_tp">Торговый представитель</string>
  	<string name="preferences_empty_fio">ФИО не введены!</string>
  	<string name="preferences_fio">ФИО</string>
  	<string name="preferences_empty_code">Код не введен</string>
  	<string name="preferences_code">Код в УС</string>
  	<string name="preferences_empty_serial">Номер не определен</string>
  	<string name="preferences_serial">IMEI аппарата</string>
  	<string name="preferences_monitor_serial">ИД Номер</string>
  <string name="preferences_work">Рабочие</string>
  	<string name="preferences_pricetype">Типы цен</string>
  	<string name="preferences_currency_summary">грн.</string>
  	<string name="preferences_currency">Валюта</string>
  	<string name="preferences_packs">Заказывать в уп.</string>
  	<string name="preferences_vozvrat">Возвраты</string>
  	<string name="preferences_erarh">Иерархия в группах</string>
  	<string name="preferences_modaluse">Фикс. калькулятор</string>
  <string name="preferences_system">Служебные</string>
  	<string name="preferences_sdload">Загрузка с SDCard</string>
	<string name="preferences_sdload_no">Загрузка с SDCard (игнор FTP настроек)</string>
  	<string name="preferences_sdout">Выгрузка на SDCard</string>
  	<string name="preferences_lastsd_dnld">/sdcard/rsa/inbox</string>
  	<string name="preferences_lastsd_out">/sdcard/rsa/outbox</string>
  	<string name="preferences_optimization">Оптимизация БД</string>
  	<string name="preferences_last_optimization">Последняя оптимизация: 01.01.01</string>
  	<string name="preferences_orderhyst">История заказов</string>
  	<string name="preferences_orderhyst_det">Период хранения (дни)</string>
  	<string name="preferences_extfilename">Расшир. имена файлов</string>
  	<string name="preferences_gps">Запись GPS</string>
  	<string name="preferences_on">Активен</string>
  	<string name="preferences_Coord">Выгрузить трек</string>
  	<string name="preferences_Coord_summary">/sdcard/rsa/track.log</string>
  <string name="preferences_sync">Синхронизация</string>
  	<string name="preferences_ide">Интерфейc</string>
  	<string name="preferences_dbf">DBF</string>
	<string name="preferences_protocol">Протокол</string>
	<string name="preferences_email">E-mail</string>
    	<string name="preferences_notactive">Не активно</string>
  <string name="preferences_Info">Информация</string>
    <string name="preferences_Info_summary">DB=?Mb ORD=?Mb GPS=?Mb</string>
  <string name="preferences_monitoring">GPS Мониторинг</string>
    <string name="preferences_mon_param">Параметры мониторинга</string>
    <string name="preferences_mon_details">Детальные настройки</string>
    <string name="preferences_mon_coord">Передача координат</string>
    <string name="preferences_mon_coordkonti">Дублировать на КОНТИ</string>
    <string name="preferences_mon_rate">Опрос GPS, сек.</string>
    <string name="preferences_mon_title">Опрос GPS</string>
    <string name="preferences_sendc_title">Передача координат</string>
    <string name="preferences_orders_autosend">Автоотправка заказов</string>
    <string name="preferences_mon_restsend">Передача остатков</string>
    <string name="preferences_restsend">Отправка остатков в WEB</string>
    <string name="preferences_autosync_activate">Автоотправка</string>
    <string name="preferences_autosync_startAt">Начало, час</string>
    <string name="preferences_autosync_stopAt">Конец, час</string>
    <string name="preferences_autosync_interval">Интервал, мин</string>
    <string name="preferences_mon_sendrate">Интервал отпр. сек.</string>
    <string name="preferences_mon_host">Хост</string>
    <string name="preferences_mon_hostport">Порт</string>
    <string name="preferences_sundaywork">По воскресеньям</string>
    <string name="preferences_sundaywork_summary">Мониторинг по воскресеньям</string>
    <string name="preferences_mon_starthour">Начало работы, час</string>
    <string name="preferences_mon_endhour">Конец работы, час</string>
    <string name="preferences_mon_password_auth">Авторизация</string>
    <string name="preferences_mon_password_title">Пароль</string>
    <string name="preferences_mon_password_summary">Разрешить редактирование</string>
   <string name="preferences_inout_title">Загрузка/Выгрузка</string>
    <string name="preferences_inout_usb">Через USB-кабель</string>
    <string name="preferences_inout_operation">Операции с данными</string>
    <string name="preferences_lighttheme">Светлая тема</string>
    <string name="preferences_lighttheme_summary">Светлое оформление</string>
    <string name="preferences_showrecinlist">Рекоменд. заказ</string>
    <string name="preferences_showrecinlist_summary">Отображать в списке товара</string>
	<string name="preferences_longattributes">Расшир. DBF-поля</string>
    <string name="preferences_vatrate_summary">20</string>
    <string name="preferences_vatrate">Ставка НДС, %</string>
    <string name="preferences_orderby">Порядок товара</string>
    <string name="preferences_orderby_summary">Без сортировки</string>
    <string name="preferences_orderby_default">Без сортировки</string>
    <string name="preferences_plan">План посещений</string>
    <string name="preferences_plan_summary">Использовать план</string>
    <string name="preferences_merch">Мерчендайзер</string>
    <string name="preferences_merch_summary">Только остатки</string>
  	<string name="sendprm_prm">Параметры связи</string>
  	<string name="sendprm_username">Username (E-mail address)</string>
  	<string name="sendprm_password">Password</string>
  	<string name="sendprm_smtp">SMTP Server</string>
  	<string name="sendprm_port">port</string>
  	<string name="sendprm_pop">POP Server</string>
  	<string name="sendprm_sendto">Send to: (E-mail address)</string>
  	<string name="sendprm_apply">Применить</string>
</resources>