<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 
      android:scrollHorizontally="false"
      android:scrollbarAlwaysDrawVerticalTrack="true"> 
	<LinearLayout android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:padding="5dp">      
    <TextView
        android:id="@+id/txt_Sendprm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sendprm_prm"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
      
    <EditText
        android:id="@+id/edtUser_Sendprm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" 
        android:singleLine="true"
        android:hint="@string/sendprm_username"
        android:layout_marginTop="5dp">
        <requestFocus />
    </EditText>

    <LinearLayout android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:weightSum="1.0">
	    <EditText
	        android:id="@+id/edtPass_Sendprm"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:inputType="textPassword" 
	        android:hint="@string/sendprm_password"
	        android:layout_weight=".30"/>
	    <CheckBox
			android:id="@+id/isSSL"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="SSL"
			android:layout_weight=".70"/>
	    
    </LinearLayout>
	<LinearLayout android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:weightSum="1.0">
    	<EditText
        	android:id="@+id/edtSMTP_Sendprm"
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent"
        	android:singleLine="true" 
        	android:hint="@string/sendprm_smtp"
        	android:layout_weight=".30"/>
    	<EditText
        	android:id="@+id/edtSMTPport_Sendprm"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent" 
        	android:inputType="number"
        	android:singleLine="true"
        	android:maxLength="5" 
        	android:hint="@string/sendprm_port"
        	android:layout_weight=".70"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:weightSum="1.0">
    	<EditText
        	android:id="@+id/edtPOP_Sendprm"
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent"
        	android:singleLine="true" 
        	android:hint="@string/sendprm_pop"
        	android:layout_weight=".30"/>
    	<EditText
        	android:id="@+id/edtPOPport_Sendprm"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:singleLine="true" 
        	android:inputType="number"
        	android:maxLength="5" 
        	android:hint="@string/sendprm_port"
        	android:layout_weight=".70"/>
    </LinearLayout>
    <EditText
        android:id="@+id/edtSendTo_Sendprm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textEmailAddress" 
        android:hint="@string/sendprm_sendto"/>

    <Button
        android:id="@+id/btnApply_Sendprm"
        android:layout_height="43dip"
        android:layout_width="fill_parent"
        android:text="@string/sendprm_apply"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:textColor="#FFFFFF"
        android:background="@drawable/states_btn_cancel"/>
  </LinearLayout>
</ScrollView>

