<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginLeft="1mm"
     android:layout_marginRight="1mm">  
       
     <RelativeLayout android:layout_width="fill_parent"
     	android:layout_height="wrap_content">            
    	<TextView android:id="@+id/txtDate_debit"
         	android:textAppearance="?android:attr/textAppearanceSmall"
         	android:text="@string/debit_date"
         	android:textColor="#00FF00"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_alignParentLeft="true"/>
    	
        <TextView android:id="@+id/txtDateAp_debit"
         	android:textAppearance="?android:attr/textAppearanceSmall"
         	android:text="@string/debit_dateto"
         	android:textColor="#00FFFF"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_alignParentRight="true"/>
         	         	
        <LinearLayout android:layout_width="wrap_content"
     			android:layout_height="wrap_content"
     			android:orientation="horizontal"
     			android:layout_centerInParent="true">     			 	 	
        		<TextView android:id="@+id/txtSum_debit"
         				android:textAppearance="?android:attr/textAppearanceSmall"
         				android:text="@string/debit_sum"
         				android:textColor="#FFFF00"
			         	android:layout_width="wrap_content"
         				android:layout_height="wrap_content"/>
         		<TextView android:id="@+id/txtCurrency_debit" 
         		    	android:textAppearance="?android:attr/textAppearanceSmall"
         				android:text="@string/debit_curency"
         				android:textColor="#FFFF00"
			         	android:layout_width="wrap_content"
         				android:layout_height="wrap_content"/>
         </LinearLayout> 	
    </RelativeLayout>
       
     <TextView android:id="@+id/txtAD_debit"
    		android:textAppearance="?android:attr/textAppearanceSmall"
        	android:text="address"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
    <LinearLayout android:layout_width="fill_parent"
     			  android:layout_height="wrap_content"
     			  android:orientation="horizontal"> 
     	
    	<TextView
    		android:textAppearance="?android:attr/textAppearanceMedium"
        	android:text="@string/debit_doctype"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
    	<TextView android:id="@+id/txtRN_debit"
    		android:textAppearance="?android:attr/textAppearanceMedium"
        	android:text="@string/debit_doccode"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>    
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
     			  android:layout_height="wrap_content"
     			  android:orientation="horizontal"> 
    	<TextView
    	    android:id="@+id/txtExpiration_debit"
    		android:textAppearance="?android:attr/textAppearanceSmall"
        	android:text="@string/debit_expiration"
        	android:textColor="#00FFFF"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
    	<TextView
    	    android:id="@+id/txtCash_debit"
    		android:textAppearance="?android:attr/textAppearanceMedium"
        	android:text="3875.00"
        	android:textColor="#FFFF00"
        	android:textStyle="bold"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="right"/> 
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
     			  android:layout_height="wrap_content"
     			  android:orientation="horizontal">
	        <TextView
	    	    android:id="@+id/txtComment_debit"
	    		android:textAppearance="?android:attr/textAppearanceSmall"
	        	android:text=""
	        	android:textColor="#00FFFF"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"/>
    </LinearLayout>
 </LinearLayout>
